--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <div class="subheading mb-3">Example</div>
                          
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March-2022 -August 2022</span></div>
+                        
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -113,8 +113,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">
                                 Poornaprajna College</h3>
-                            <div class="subheading mb-3">Under Graduate, Stream</div>
-                            <p>Percentage: 90.00%</p>
+                            <div class="subheading mb-3">Bachelor of XXXXXXXX</div>
+                            <p>Percentage:XX.XX%</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Year of completion: 20XX
                         </span></div>
@@ -125,8 +125,8 @@
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <h4> Example </h4>
+                    <h2 class="mb-3">Skills</h2>
+                    <h4 class=""> Example </h4>
                     <div class="subheading mb-3">Programming Languages</div>
                     <ul class="list-inline">
                         <li class="list-inline-item"><p>C++ Programming(Advance)</p></li>
